--- a/templates/unfollowers.html
+++ b/templates/unfollowers.html
@@ -63,6 +63,7 @@
             font-size: 24px;
             margin-bottom: 20px;
             color: #ff4500;
+            font-weight: bold;
         }
     </style>
 </head>
