--- a/templates/unfollowers.html
+++ b/templates/unfollowers.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Unfollowers</title>
+    <title>Seb`s goated website</title>
+    <link rel="icon" href="../image.jpg">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -74,7 +75,7 @@
 
     <div class="container">
         <div class="unfollowers-count">
-            Unfollowers: {{ unfollowers_count }}
+            Amount Of Losers: {{ unfollowers_count }}
         </div>
 
         <h2>These People dont follow you back!</h2>
