--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seb's goated website</title>
-    <link rel="icon" href="../image.jpg">
+    <link rel="icon" href="../static/image.jpg">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -91,7 +91,7 @@
 
     <div class="video-container">
         <video id="tutorial-video" width="600" controls>
-            <source src="../tut_website.mp4" type="video/mp4">
+            <source src="../static/tut_website.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
