--- a/templates/unfollowers.html
+++ b/templates/unfollowers.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seb`s goated website</title>
-    <link rel="icon" href="../image.jpg">
+    <link rel="icon" href="../static/image.jpg">
     <style>
         body {
             font-family: Arial, sans-serif;
